add user/:userId/change-password api
