# swagger.json
@@ -201,6 +201,61 @@
         ]
       }
     },
+    "/users/{userId}/change-password": {
+      "put": {
+        "tags": ["user"],
+        "summary": "Changes a user password",
+        "operationId": "changeUserPassword",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "ID of user to change password",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Admin object that needs to be updated",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ChangeUserPassword"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/OK"
+          },
+          "400": {
+            "$ref": "#/components/responses/BAD_REQUEST"
+          },
+          "401": {
+            "$ref": "#/components/responses/UNAUTHORIZED"
+          },
+          "403": {
+            "$ref": "#/components/responses/FORBIDDEN"
+          },
+          "404": {
+            "$ref": "#/components/responses/NOT_FOUND"
+          },
+          "500": {
+            "$ref": "#/components/responses/INTERNAL_SERVER_ERROR"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
     "/users/{userId}": {
       "get": {
         "tags": ["user"],
@@ -635,6 +690,21 @@
         },
         "required": ["first_name", "last_name", "email", "password"]
       },
+      "ChangeUserPassword": {
+        "type": "object",
+        "properties": {
+          "current_password": {
+            "type": "string"
+          },
+          "new_password": {
+            "type": "string"
+          },
+          "confirm_password": {
+            "type": "string"
+          }
+        },
+        "required": ["current_password", "new_password", "confirm_password"]
+      },
       "AddAdmin": {
         "type": "object",
         "properties": {
@@ -650,12 +720,15 @@
           "password": {
             "type": "string"
           },
+          "password_confirm": {
+            "type": "string"
+          },
           "is_super": {
             "type": "boolean",
             "default": false
           }
         },
-        "required": ["first_name", "last_name", "email", "password"]
+        "required": ["first_name", "last_name", "email", "password", "password_confirm"]
       },
       "UpdateAdmin": {
         "type": "object",
@@ -664,9 +737,6 @@
             "type": "string"
           },
           "last_name": {
-            "type": "string"
-          },
-          "password": {
             "type": "string"
           },
           "is_super": {
